Working on volunteer roles

--- a/01.schedule.md
+++ b/01.schedule.md
@@ -1,5 +1,6 @@
 # ⏰ Detailed schedule
 
+(schedule:before)=
 ## Before the Carnival
 
 | When | What | Who |
@@ -11,7 +12,7 @@
 | by Sept 26 | Bibs printing 🖨 complete | Fedor |
 | by Oct 8 | Distribute flyers for Stringybark residents | Michael + Emily |
 | by Oct 8 | Info posters on all public areas | Marina + Fedor |
-| Oct 10 | Carnival dinner: full payment, finalize setting | Marina |
+| Oct 10 | Carnival dinner: full payment, finalize setting, info flyers | Marina |
 | by Oct 12 | Collect all 🏆 from all sponsors and partners | Marina, Rohan, Kris |
 | Oct 10, 20:00 | ➡️ Team Zoom Meeting ⬅️ | **Everyone** |
 | Oct 11 | Collect 🔑 for all gates | Marina |
@@ -26,6 +27,7 @@
 | Oct 16 | Charge up batteries and power banks 🔋 | Fedor |
 | Oct 16, 20:00 | ➡️ Team Zoom meeting ⬅️ | **Everyone** |
 
+(schedule:warmup)=
 ## Oct 17, Thursday, WARM-UP
 
 🗺 [Arena location for WARM-UP event](https://maps.app.goo.gl/RkufTrcQbvMn9bMF6)
@@ -33,28 +35,30 @@
 | When | What | Who |
 |--|--|--|
 | 6:18 | 🌅 Sunrise | |
-| 7:00 - 9:00 | Control setup | Marina, Ariadna |
+| 7:00 - 9:00 | Controls setup | Marina, Ariadna |
 | by 14:00 | Toilets 🚻 arrive | Rohan |
 | 14:00 - 15:00 | Arena 🎪 setup <br/> Registration tent <br/> IT team tent <br/> Commentator tent | Fedor, Sergei <br/> `arena team` <br/> `IT team` |
 | 14:30 - 17:00 | Parking marshals 🚗 | `parking team` |
-| 15:00 | Event center opens 🎪 |  |
+| 15:00 | **Event center opens** 🎪 | |
 | 16:00 - 18:00 | 📣 Commentator | Arpad |
-| 16:00 - 18:00 | Come-and-try MTBO tent 🙋 | Toni, Raynie |
+| 16:00 - 18:00 | Come-and-try MTBO tent 🧭 | Toni, Raynie |
 | 16:00 - 18:30| Blue Lightning Stall 🧁 | Deirdre |
 | 16:00 - 19:00 | Mojo Bike Repairs 🔧 | Chris |
 | 16:30 - 17:00 | Stretching with Yoga for Posture 🧘 | Elena |
+| 16:30 - 19:00 | Kids' tent 👦 | ? |
+| 16:30 - 17:00 | Start 🚀 setup | `start team` |
 | 17:00 - 18:00 | 🚴‍♀️ **Start window for WARM-UP** | `start team` |
-| 17:00 - 19:00 | Kids' tent 👦 | ? |
+| 18:00 - 18:30 | Start 🚀 pack up | `start team` |
 | 18:30 - 21:30 | 🍷 Social Drinks at *The Verandah* at *Alivio Tourist Park* | [Location](https://maps.app.goo.gl/Wte5veujM1qiDF4T9) | |
-| 19:00 | WARM-UP course closure 🏁 | |
-| 19:00 - 20:00 | Control collection | Marina, ? |
+| 19:00 | **WARM-UP course closure** 🏁 | |
+| 19:00 - 20:00 | Controls collection | Marina, ? |
 | 19:00 - 20:00 | Arena 🎪 pack up | Sergei, `arena team` |
 | 19:20 | 🌅 Sunset | |
-| 21:00 | Permit for Bruce Ridge expires | |
+| by 21:00 | Everyone leaves Bruce Ridge | |
 | by 21:00 | Publish results 🧾 for WARM-UP | Marina, Fedor |
 | 22:00 | Charge up batteries and power banks 🔋 | Fedor |
 
-
+(schedule:mass)=
 ## Oct 18, Friday, MASS
 
 [Arena location for MASS event](https://maps.app.goo.gl/caWZitWLByRsVxT79)
@@ -62,77 +66,92 @@
 | When | What | Who |
 |--|--|--|
 | 6:17 | 🌅 Sunrise | |
-| 12:00 - 15:00 | Control setup | Cathy, Belinda, Jo, Susie, Alison |
+| 12:00 - 15:00 | Controls setup | Cathy, Belinda, Jo, Susie, Alison, Shannon, Rebecca |
 | by 14:00 | Toilets 🚻 arrive | Rohan |
 | 14:00 - 15:00 | Arena 🎪 setup <br/> Registration tent <br/> IT team tent <br/> Commentator tent | Fedor, Sergei <br/> `arena team` <br/> `IT team` |
 | 14:30 - 16:15 | Parking and traffic marshals 🚗 | `parking team` |
-| 15:00 | Event center opens 🎪 |  |
+| 15:00 | **Event center opens** 🎪 | |
+| 15:00 - 16:00 | Start 🚀 setup | `start team` |
 | 15:00 - 19:00 | Coffee van ☕️ | KDS coffee |
 | 15:30 - 16:00 | Stretching with Yoga for Posture 🧘 | Elena |
-| 15:30 - 16:30 | Come-and-try MTBO tent 🙋 | Toni, Raynie |
+| 15:30 - 16:30 | Come-and-try MTBO tent 🧭 | Toni, Raynie |
 | 16:00 - 19:00 | 📣 Commentator | Arpad |
 | 16:00 - 19:30 | First-Aid officer 🚑 present | GetFirstAid |
 | 16:00 - 19:00 | Mojo Bike Repairs 🔧 | Chris |
 | 16:00 - 19:00 | Kids' tent 👦 | ? |
 | 16:30 - 17:00 | 🚴‍♀️ **Start window for MASS** | `start team` |
+| 17:00 - 18:00 | Start 🚀 pack up | `start team` |
 | 17:15 - 19:00 | Traffic marshals 🚗 | `parking team` |
 | Aprx. 18:45 | Presentation ceremony 🏆 for MASS | Marina, Veronika, Cathy, Belinda |
-| 19:00 | Course closure 🏁 | |
+| 19:00 | **MASS course closure** 🏁 | |
 | 19:00 - 20:00 | Arena 🎪 pack up | `arena team` |
-| 19:00 - 20:00 | Control collection | Cathy, Belinda, Jo, Susie, Alison |
+| 19:00 - 20:00 | Controls collection | Cathy, Belinda, Jo, Susie, Alison, Shannon, Rebecca |
 | 19:21 | 🌅 Sunset | |
 | by 21:00 | Publish official results 🧾 for MASS | Marina, Fedor |
-| 21:00 | Permit for West Stromlo expires | |
+| by 21:00 | Everyone leaves West Stromlo | |
 | 22:00 | Charge up batteries and power banks 🔋 | Fedor |
 
+(schedule:middle)=
 ## Oct 19, Saturday, MIDDLE
 
 [Arena location for MIDDLE event](https://maps.app.goo.gl/2cXzt4ywia9G6Hj77)
 
 | When | What | Who |
 |--|--|--|
+| 6:00 - 8:00 | Controls setup | Michael, Emily, Tom, Emily, Matt |
 | 6:16 | 🌅 Sunrise | |
-| 6:00 - 8:00 | Control setup | Michael, Emily, Tom, Emily, Matt |
+| 6:30 - 7:30 | Arena 🎪 setup <br/> Registration tent <br/> IT team tent <br/> Commentator tent | Fedor, Sergei <br/> `arena team` <br/> `IT team` |
+| 6:30 - 8:30 | Starts A and B setup | `start team` |
 | 7:00 - 10:00 | Parking and traffic marshals 🚗 to start | `parking team` |
-| 7:30 | Event center opens 🎪 |  |
+| 7:30 | **Event center opens** 🎪 | |
+| 7:30 - 8:30 | Start 🚀 setup | `start team` |
 | 7:30 - 11:00 | Coffee van ☕️ | KDS coffee |
 | 7:30 - 12:00 | Mojo Bike Repairs 🔧 | Chris |
-| 7:30 - 9:30 | Come-and-try MTBO tent 🙋 | Toni, Raynie |
+| 7:30 - 9:30 | Come-and-try MTBO tent 🧭 | Toni, Raynie |
 | 8:00 - 12:00 | 📣 Commentator | Arpad |
 | 8:00 - 12:30 | Kids' tent 👦 | ? |
 | 8:30 - 10:00 | 🚴‍♀️ **Start window for MIDDLE** | `start team` |
 | 9:00 - 12:00 | First-Aid officer 🚑 at te finish |  |
 | 9:00 - 12:00 | Traffic marshals 🚗 from finish | `parking team` |
 | 9:30 - 12:00 | Massage 💆‍♀️ by Physio Sport | Cassandra |
-| 12:00 | Course closure 🏁 | |
-| 12:00 - 14:00 | Control collection | Michael, Emily, Tom, Emily, Matt |
-| 12:00 - 12:45 | Arena relocation 🎪 | Fedor, Sergei, `arena team` |
-| 13:00 | Permit for Jerrabomberra Community center expires | |
+| 10:00 - 10:30 | Start 🚀 pack up and relocation | `start team` |
+| 12:00 | **MIDDLE course closure** 🏁 | |
+| 12:00 - 14:00 | Controls collection | Michael, Emily, Tom, Emily, Matt |
+| 12:00 - 12:20 | Arena relocation 🎪 | Fedor, Sergei, `arena team` |
+| by 13:00 | Everyone leaves Jerrabomberra | |
 | by 14:00 | Publish official results 🧾 for MIDDLE | Marina, Fedor |
 
+(schedule:sprint)=
 ## Oct 19, Saturday, SPRINT
 
 [Arena location for SPRINT event](https://maps.app.goo.gl/PX7dE2mznda9W7Q49)
 
 | When | What | Who |
 |--|--|--|
-| 10:00 - 13:00 | Control setup | Eoin, Cath |
+| 10:00 - 13:00 | Controls setup | Eoin, Cath |
+| 10:30 - 14:00 | Start 🚀 setup | `start team` |
 | 12:30 - 14:00 | Parking marshals 🚗 | `parking team` |
-| 13:00 | Event center opens 🎪 | |
+| 12:20 - 13:00 | Arena 🎪 setup <br/> Registration tent <br/> IT team tent <br/> Commentator tent | Fedor, Sergei <br/> `arena team` <br/> `IT team` |
+| 13:00 | **Event center opens** 🎪 | |
+| 13:00 - 14:00 | Start 🚀 setup | `start team` |
 | 13:00 - 16:00 | Blue Lightning Stall 🧁 | Deirdre |
 | 13:00 - 16:00 | Mojo Bike Repairs 🔧 | Chris |
-| 13:30 - 15:00 | Come-and-try MTBO tent 🙋 | Toni, Raynie |
+| 13:30 - 15:00 | Come-and-try MTBO tent 🧭 | Toni, Raynie |
 | 13:30 - 16:30 | 📣 Commentator | Arpad |
 | 13:30 - 16:30 | Kids' tent 👦 | ? |
 | 13:45 - 16:30 | First-Aid officer 🚑 present | GetFirstAid |
 | 14:00 - 15:30 | 🚴‍♀️ **Start window for SPRINT** | `start team` |
 | 14:30 - 16:30 | Massage 💆‍♀️ by Physio Sport | Cassandra |
-| 16:30 | Course closure 🏁 | |
-| 16:30 - 17:00 | Control collection | Eoin, Cath, 3? |
-| 17:30 | Permit for Sutton Road Driving center expires | |
+| 15:30 - 16:30 | Start 🚀 pack up | `start team` |
+| 16:30 | **SPRINT course closure** 🏁 | |
+| 16:30 - 17:00 | Starts pack up | `start team` |
+| 16:30 - 17:00 | Controls collection | Eoin, Cath, 3? |
+| 16:30 - 17:30 | Arena 🎪 pack up | `arena team` |
+| by 17:30 | Everyone leaves Sutton Road | |
 | by 18:30 | Publish official results 🧾 for SPRINT | Marina, Fedor |
 | 19:22 | 🌅 Sunset | |
 
+(schedule:dinner)=
 ## Oct 19, DINNER 🍾 🥂 🎉 
 
 at **Harmonie German Club**  
@@ -140,49 +159,59 @@ at **Harmonie German Club**
 
 | When | What | Who |
 |--|--|--|
-| 18:30 | Dining commences 🍽 | by registration |
+| by 18:30 | Dinner presentation setup | Fedor, Sergei, `arena team` |
+| 18:30 | **Dining commences** 🍽 (by registration) | |
 | 19:30 | Presentation ceremony 🏆 🏆 for MIDDLE and SPRINT | Marina, Veronika, Fedor,<br/>Michael, Emily, Tom, Emily,<br/>Cath, Eoin |
-| 21:45 | Dinner concludes | |
+| 21:45 | **Dinner concludes** | |
+| 21:45 | Equipment pack up | Fedor, Marina |
 | 22:00 | Charge up batteries and power banks 🔋 | Fedor |
 
+(schedule:long)=
 ## Oct 20, Sunday, LONG
 
 [Arena location for LONG event](https://maps.app.goo.gl/UvWwtsQ32WtoRC1T6)
 
 | When | What | Who |
 |--|--|--|
-| 5:30 - 7:30 | Control setup | Marina, Fedor |
+| 5:30 - 7:15 | Controls setup | Marina, Fedor |
 | 6:14 | 🌅 Sunrise | |
+| 7:00 - 8:00 | Arena 🎪 setup <br/> Registration tent <br/> IT team tent <br/> Commentator tent | Fedor, Sergei <br/> `arena team` <br/> `IT team` |
 | by 7:30 | Toilets 🚻 arrive | Rohan |
 | 7:30 | Kowen forest gates open for public | `parking team` |
 | 7:30 - 9:30 | Parking marshals 🚗 | `parking team` |
 | 7:30 - 9:00 | Coffee van ☕️ | KDS coffee |
-| 8:00 | Event center opens 🎪 |  |
+| 8:00 | **Event center opens** 🎪 |  |
+| 8:00 - 9:00 | Start 🚀 setup | `start team` |
 | 8:00 - 10:00 | Mojo Bike Repairs 🔧 | Chris |
-| 8:00 - 10:00 | Come-and-try MTBO tent 🙋 | Toni, Raynie |
+| 8:00 - 10:00 | Come-and-try MTBO tent 🧭 | Toni, Raynie |
 | 8:30 - 12:30 | 📣 Commentator | Arpad |
 | 8:30 - 13:30 | Kids' tent 👦 | ? |
 | 9:00 - 13:00 | First-Aid officer 🚑 present | GetFirstAid |
 | 9:00 - 10:30 | 🚴‍♀️ **Start window for LONG** | `start team` |
 | 10:00 - 13:00 | Blue Lightning Stall 🧁 | Deirdre |
-| Aprx. 12:30 | Presentation ceremony 🏆 for LONG | Marina, Veronika, Fedor |
-| 13:30 | Course closure 🏁 | |
-| 13:30 - 15:30 | Control collection | 6? |
+| 10:30 - 11:30 | Start 🚀 pack up | `start team` |
+| Aprx. 12:30 | Presentation ceremony 🏆 for LONG<br/>Carnival closure ceremony | Marina, Veronika, Fedor |
+| 13:30 | **LONG course closure** 🏁 | |
+| 13:30 - 15:30 | Controls collection | 6? |
+| 13:30 - 15:30 | Arena 🎪 pack up | `arena team` |
 | 16:00 | Kowen forest gates locked | |
-| 16:30 | Permit for Kowen forest expires | |
+| by 16:30 | Everyone leaves Kowen forest | |
 | by 17:30 | Publish official results 🧾 for LONG | Marina, Fedor |
 | 19:23 | 🌅 Sunset | |
-| 22:00 | Charge up batteries and power banks 🔋 | Fedor |
 
+(schedule:after)=
 ## After the Carnival
 
 | When | What | Who |
 |--|--|--|
-| Oct 21 | Return 35 SIACs to Ryan Welsh, CORC <br/> Return equipment to OACT shed and office | Marina + Fedor, Sergei |
-| Oct 21 | Return toilets 🚻 to [Canberra Hire](https://maps.app.goo.gl/Jau9rcGNu5fGNsbB9) | Rohan || | Thank you messages 💌 to all sponsors and partners | Marina |
+| Oct 21 | Return toilets 🚻 to [Canberra Hire](https://maps.app.goo.gl/Jau9rcGNu5fGNsbB9) | Rohan |
+| Oct 21 | Return equipment to OACT shed and office | Marina + Fedor, Sergei |
+| | Return borrowed SI units to their owners | Fedor |
+| | Return 35 borrowed SIAC to Ryan Welsh, CORC | Fedor |
+| | Thank you messages 💌 to all sponsors and partners | Marina |
 | | Thank you messages 💌 to all participants | Marina |
+| | Thank you email 💌 to the organizing team | Marina |
 | | Articles, Photos, Interviews, Results <br/> to OA, OACT, ONSW, Pedal Power, Aus Orienteer, OA news | Marina |
-| | Financial Report to OACT | Marina |
-| | Thank you email 💌 to the organizers team | Marina |
+| | Financial report 🧾 to OACT | Marina |
 
 
