--- a/02.people.md
+++ b/02.people.md
@@ -1,28 +1,149 @@
 # 🙋 Volunteer roles and roster
 
-## Central roles
+This pages lists the functions 
 
-- Marina Iskhakova - Event Director - `0412308310`
-- Fedor Iskhakov - Technical Director - `0434019571`
-- Sandor Talas - IOF Advisor
+| Name | Contact | Role |
+|:-|-|-:|
+| Marina Iskhakova | `0412308310` | Event Director |
+| Fedor Iskhakov | `0434019571` | Technical Director, `IT team` |
+| Sandor Talas | | IOF Avisor |
 
-## Day teams
+(people:courses)=
+## Course setters and controllers
 
-- Course planning
-- Control setup
-- Control collection
+| Name | Contact | Role | Event |
+|:-|-|-:|-:|
+| <span style="background-color: black; color: white;">&nbsp;Jim Anderson&nbsp;</span> | In memory | Course Setter | WARM-UP |
+| Marina Iskhakovs | | Course Setter | WARM-UP |
+| Fedor Iskhakov | | Course Controller | WARM-UP |
+| Cathy Hogg | | Course Setter | MASS |
+| Belinda Allison | | Course Controller | MASS |
+| Michael Reed | | Course Setter | MIDDLE |
+| Emily Walter | | Course Controller | MIDDLE |
+| Tom Walter | | Course Controller | MIDDLE |
+| Cath Chalmers | | Course Setter | SPRINT |
+| Eoin Rothery | | Course Controller | SPRINT |
+| Fedor Iskhakov | | Course Setter | LONG |
+| Marina Iskhakova | | Course Controller | LONG |
 
-## Functional teams
+(people:start)=
+## Start team 
 
-- Arena team
-- Parking team (+ gate, road marshals)
-- Registration + hire team
-- IT team
-- Start team
+- follow the [schedule](schedule:warmup) for the `start team` on each day
+- set up [start equipment](equipment:start) and bunting 
+- implement the prescribed start arrangement for each event (mass, middle, sprint, long)
+- *MIDDLE event has two separate starts for Championship and Carnival*
+- manage the start process according to the bulletin and the competition rules ([documents](home:documents))
+- pack up the start equipment and get ready for the next event
+- use own transport to move equipment between events
+- *relocation between MIDDLE and SPRINT events should happen right after the start is closed*
 
-#### Parking teams
+| Name | Contact | Role | Availability |
+|:-|-|-:|-:|
+| Cath Chalmers | | Leader of the `start team` | all events |
+| ? | | Champ starts | ? |
+| ? | | Champ starts | ? |
+| ? | | Champ starts | ? |
+| ? | | Carnival starts | ? |
+| ? | | Carnival starts | ? |
 
-| Event | Setup | Collection |
+(people:arena)=
+## Arena team
+
+- follow the [schedule](schedule:warmup) for the `arena team` on each day
+- set up all [tents, chair and tables](equipment:tents)
+- set up and collect all banners and road signs for each event
+- set up the podium and press wall for the presentations
+- set up all flags according to the arena plan for each event
+  - WARM-UP [arena diagram](arena-diagram:warmup)
+  - MASS [arena diagram](arena-diagram:mass)
+  - MIDDLE [arena diagram](arena-diagram:middle)
+  - SPRINT [arena diagram](arena-diagram:sprint)
+  - LONG [arena diagram](arena-diagram:long)
+- deliver equipment to each tent, including
+  - [general arena equipment](equipment:arena)
+  - [IT tent gear](equipment:it)
+  - [registration tent gear](equipment:registration)
+  - [commentary equipment](equipment:commentator)
+  - [come-and-try materials](equipment:cometry)
+- help start team with the [start gear](equipment:start) if necessary
+- move the toilets to the designated spots according to the [schedule](schedule:warmup)
+- coordinate with the IT team for the setup and pack up of the IT equipment
+- set out and collect garbage bags and bins at the arena
+- pack up all equipment and gear for the next event
+- *particular proficiency is required for the relocation of the arena between the MIDDLE and SPRINT events on Saturday:*
+  - *there is only one hour to pack up and set up complete arena*
+  - *the drive time between event centers is about 12 minutes*
+
+| Name | Contact | Role | Availability |
+|:-|-|-:|-:|
+| ? | | Leader of the `arena team` | all events |
+| Sergei Maksimov | | Active glass van driver | Saturday, Sunday |
+| ? | | | Thursday, Friday |
+| ? | | | |
+| ? | | | |
+| Rohan Hyslop | | Toilets | all events |
+
+
+(people:registration-hire)=
+## Registration and hire team
+
+- follow the [schedule](schedule:warmup) to run registration tent while arena is open on each day
+- provide information about the Carnival, answer all questions
+  - [bulletin](home:documents) should provide most answers
+  - this [operations manual](index.md) provides additional information
+- hand out competitors' bags to pre-registered competitors which already contain
+  - race bib
+  - SIAC stick (if rented)
+  - sponsor merchandise and goodies
+- operate the entry-on-the-day registrations
+  - have each competitors fill out electronic registration form
+  - as backup, have handy registration forms on paper
+  - hand out rented SIAC stick (registered through the form)
+  - collect entry and rental fees
+  - hand out sponsor merchandise
+- operate the map board hire 
+  - both for pre-registered and entry-on-the-day competitors
+  - help with fitting the map board
+- pass information on entry-on-the-day competitors to the `IT team`
+
+| Name | Contact | Role | Availability |
+|:-|-|-:|-:|
+| ? | | | |
+| ? | | | |
+| Ann Scown | | Map boards hire | ? |
+| John Scown | | Map boards hire | ? |
+
+
+(people:computers)=
+## IT team
+
+- follow the [schedule](schedule:warmup) for the `IT team` on each day
+- run all aspects of IT support of the Carnival
+- produce preliminary live results and official results
+- see [separate page](04.computers.md) for detailed information
+
+| Name | Contact | Role | Availability |
+|:-|-|-:|-:|
+| Fedor Iskhakov | `0434019571` | Setup, system, inquiries | <tt>11111</tt> |
+| Alex Maksimov | | MeOS, screens | <tt>11111</tt> |
+| Henry Gotzinger | | MeOS | <tt>10111</tt> |
+| Oliver Gotzinger | | MeOS | <tt>00111</tt> |
+| Owen Radajewski | | MeOS | <tt>00001</tt> |
+| Tate Needham | | meshO radio controls | |
+
+- Availability indicated for WARM-UP, MASS, MIDDLE, SPRINT, LONG
+
+
+(people:parking)=
+## Parking team
+
+- follow the [schedule](schedule:warmup) for the `parking team` on each day
+- parking marshals meet the arriving competitors and guide them to the parking spots
+- traffic marshals ensure safety of competitors when moving along and crossing the public roads
+- 
+
+| Event | Parking marshals | Traffic marshals |
 |:-|-:|-:|
 | WARM-UP | | |
 | MASS | | |
@@ -30,19 +151,28 @@
 | SPRINT | | |
 | LONG | | |
 
-#### Controls teams
+| Parking & Marshals Ann Ingwersen   | | | Yes |
+| Parking & Marshals Frank Ingwersen | | | Yes |
+
+(people:controls)=
+## Controls setup and collection
 
 | Event | Setup | Collection |
 |:-|-:|-:|
 | WARM-UP | Marina<br/>Ariadna | Marina<br/>3? |
-| MASS | Cathy<br/>Belinda<br/>Jo Allison<br/>Susie Kluth<br/>Alison Inglis | Cathy<br/>Belinda<br/>Jo Allison<br/>Susie Kluth<br/>Alison Inglis |
+| MASS | Cathy<br/>Belinda<br/>Jo Allison<br/>Susie Kluth<br/>Alison Inglis<br/>Shannon Jones<br/>Rebecca Minty | Cathy<br/>Belinda<br/>Jo Allison<br/>Susie Kluth<br/>Alison Inglis<br/>Shannon Jones<br/>Rebecca Minty|
 | MIDDLE | Michael<br/>Emily<br/>Tom<br/>Emily<br/>Matt Shadwell | Michael<br/>Emily<br/>Tom<br/>Emily<br/>Matt Shadwell |
 | SPRINT | Eoin<br/>Cath | Eoin<br/>Cath<br/>2? |
 | LONG | Marina<br/>Fedor | 6? |
 
+(people:cometry)=
+## Come-and-try team
+
+(people:kids-tent)=
+## Kids tent
+
 
 ## Volunteers
-
 
 |     Role                                       |     14 OCT,   SPRINT, START 9.00-10.00am     Finish   closure 11.00am                                 |     14 OCT,   MIDDLE, START 2pm-3pm     Finish   closure 5:00pm                                    |     15 OCT,   LONG, START 9:00-10:00am     Finish   closure 1:00pm                                                                                              |
 |------------------------------------------------|-------------------------------------------------------------------------------------------------------|----------------------------------------------------------------------------------------------------|-----------------------------------------------------------------------------------------------------------------------------------------------------------------|
@@ -66,3 +196,31 @@
 |     First-Aid officer   (1)                    |     9am-12.00pm – Raynie                                                                              |     2.30pm-5pm - 1 first-aid officer                                                               |     9:30am-1pm  - 1 first-aid officer                                                                                                                           |
 |     Coffee van (1)                             |     8am – 10am Coffee Van,   Charlie                                                                  |                                                                                                    |     7.45am – 10am Coffee Van,   Charlie                                                                                                                         |
 |     ALL CREW                                   |     Fedor, Marina,   Cath, Eoin, Alex, Ann Ingwersen, Frank, Raynie, Cathy, Yuejia -10                |     Fedor, Marina,   Cath, Emily, Alex, Ann Ingwersen, Frank, Cathy, Yuejia (9)                    |     Fedor, Marina,   Cath, Emily, Alex, Ann Ingwersen, Frank, Yuejia (8 )                                                                                       |
+
+
+# Full list of all people
+
+| Photo | Name | Contact | Role | Present at events |
+|-|:-|-|-:|:-:|
+| Andrew Slattery | | Mapper | Yes |
+| Jim Anderson | | Social & Trails | In memory |
+| Phil Walker | | Grants | Yes |
+| Andrew Cheffers | | Finance OACT | Yes |
+| Paul De Jongh | | OACT Website | Yes? |
+| Arpad Koscik | | Commentary | Yes |
+| Emily Stewart-Reed | | Promo & Social Media | Yes |
+| Raynie McNee | | Come & Try MTBO | Yes |
+| Alysha McNee | | Promo & Social Media | Yes |
+| Rohan Hyslop | | Transport & Logistics | Yes |
+| Noel Schoknecht  | | Design | |
+| Ariadna Iskhakova | | Design | Yes |
+| Mesho Radio Tate Needham | | | Yes |
+| It Team Alex Maksimov | | | Yes |
+| It Team Owen Radajewski | | | Yes |
+| It Team Henry Gotzinger | | | Yes |
+| It Team Oliver Gotzinger | | | Yes |
+| Presentations Assistant Veronika Iskhakova | | | Yes |
+
+| Arpad Koscik | | Commentary |
+
+
