--- a/03.equipment.md
+++ b/03.equipment.md
@@ -2,6 +2,7 @@
 
 _Exhaustive_ list of gear and equipment required for the Carnival.
 
+(equipment:tents)=
 ## Tents, tables and chairs
 
 | | Tents | Tables | Chairs | 
@@ -15,6 +16,7 @@ _Exhaustive_ list of gear and equipment required for the Carnival.
 | Start | two 3x3 | 1 | 2 |
 | **TOTAL** | 8! | 8 | 14 |
 
+(equipment:arena)=
 ## General arena equipment
 
 Right five columns indicate whether the item is required for the individual events.
@@ -37,6 +39,16 @@ Right five columns indicate whether the item is required for the individual even
 - press wall 3x2.4m
 - logo banners?
 
+### + dinner
+
+- podium
+- press wall
+- prize table
+- diplomas, certificates, medals, prizes
+- they do have audio/PA system
+- will there be a projector for photos?
+
+(equipment:it)=
 ## Central IT tent
 
 - All IT equipment is used in all events
@@ -69,20 +81,21 @@ Right five columns indicate whether the item is required for the individual even
 ### + radio controls
 
 
-
+(equipment:registration)=
 ## Registration tent
 
 - includes map board hire tent!
 - 1 table + 2 chairs for registration
 - 1 table + 2 chairs for map board hire
-- 
+
+- ipad (or two) for registrations
 
 ### + competitors' bags
 
 ### + map board hire
 
 
-
+(equipment:commentator)=
 ## Commentator tent
 
 - Arpad Kocsik (ADD to Bulletin 3!)
@@ -92,6 +105,7 @@ Right five columns indicate whether the item is required for the individual even
 - 1 table (small) + 1 chair
 - audio equipment
 
+(equipment:cometry)=
 ## Come-and-try tent
 
 - small tent
@@ -102,6 +116,7 @@ Right five columns indicate whether the item is required for the individual even
 - 2 flags `Come and try`
 - 2 coach volunteers (Toni, Raynie)
 
+(equipment:start)=
 ## Start set
 
 - bunting!
